# keboola-storage-duckdb

./: .gitignore  .lsp.json  CLAUDE.md
cli/: README.md  pyproject.toml
cli/src/keboola_duckdb_cli/: __init__.py  client.py  config.py  main.py  output.py
cli/src/keboola_duckdb_cli/commands/: buckets.py  config_cmd.py  files.py  projects.py  tables.py
cli/tests/: test_config.py  test_files.py  test_projects_buckets.py  test_tables.py
docs/: README.md  bigquery-driver-research.md  codex-driver-plan-review.md  connection-duckdb-patch.md  duckdb-api-endpoints.md  duckdb-driver-plan.md  duckdb-keboola-features.md  duckdb-technical-research.md  local-connection.md  time-tracker.md  zajca.md
docs/adr/: 001-duckdb-microservice-architecture.md  002-duckdb-file-organization.md  003-duckdb-branch-strategy.md  004-duckdb-snapshots.md  005-duckdb-write-serialization.md  006-duckdb-on-prem-storage.md  007-duckdb-cow-branching.md  008-central-metadata-database.md  009-duckdb-file-per-table.md  010-duckdb-sql-interface.md  011-apache-arrow-integration.md  012-branch-first-api-design.md  013-sql-object-naming-convention.md  014-grpc-driver-interface.md  015-observability-and-operation-tracking.md
docs/api/: duckapi.json  e2e-log.txt
docs/plan/: README.md  decisions.md  phase-01-backend.md  phase-02-projects.md  phase-03-buckets.md  phase-04-tables.md  phase-05-auth-queue.md  (+20 more)
duckdb-api-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  dashboard.html  dashboard2.html  docker-compose.yml  env.example  pyrightconfig.json  pytest.ini  requirements.txt
(+91 files in other folders)
